--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "autoprefixer": "^7.2.6",
     "bem": "^2.0.0",
     "bem-animations": ">=1.1.0",
-    "bem-components-custom": "^0.0.17",
+    "bem-components-custom": "2.0.2",
     "bem-core": "^4.2.1",
     "bem-icons": "^2.0.0",
     "bem-illustrations": ">=1.0.0",
     "bem-layouts": "^2.1.4",
     "bem-logos": "^1.1.10",
-    "bem-patterns": "^4.4.23",
+    "bem-patterns": "^5.0.0",
     "bem-social": "^1.0.6",
-    "bem-themes": "^1.0.26",
+    "bem-themes": "^2.0.4",
     "bem-tools-create": "^2.3.0",
     "bem-typo": "^1.3.3",
     "bem-vectors": "^1.1.0",
