--- a/package.json
+++ b/package.json
@@ -18,19 +18,8 @@
   "devDependencies": {
     "autoprefixer": "^7.2.6",
     "bem": "^2.0.0",
-    "bem-animations": ">=1.1.0",
     "bem-components-custom": "3.0.0",
     "bem-core": "^4.2.1",
-    "bem-icons": "^2.0.1",
-    "bem-illustrations": ">=1.0.0",
-    "bem-layouts": "^2.1.4",
-    "bem-logos": "^1.1.10",
-    "bem-patterns": "^5.0.2",
-    "bem-social": "^2.0.5",
-    "bem-themes": "^3.0.3",
-    "bem-tools-create": "^2.3.0",
-    "bem-typo": "^1.3.3",
-    "bem-vectors": "^1.1.0",
     "enb": "^1.3.0",
     "enb-bem-techs": "^2.2.1",
     "enb-bemxjst": "^8.10.4",
@@ -60,6 +49,7 @@
     "postcss-url": "^7.3.2",
     "rebem-css": "^0.2.0",
     "through2-filter": "^2.0.0",
+    "whitepaper-bem": "^0.0.2",
     "ym": "^0.1.2"
   },
   "scripts": {
@@ -67,5 +57,6 @@
     "start": "enb server",
     "build": "enb make"
   },
-  "private": true
+  "private": true,
+  "dependencies": {}
 }
